<resources>
    <string name="app_name">Github User\'s Search</string>
    <string name="search_username">Cara Username</string>
    <string name="username">Username</string>
    <string name="name">Nama</string>
    <string name="company">Perusahaan</string>
    <string name="location">Lokasi</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="repository">Repository</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_follower">Follower List</string>
    <string name="content_tab_following">Following List</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="description">Description</string>
    <string name="noData">No Data</string>
    <string name="settings">Pengaturan</string>
</resources>